# serial-monitor-rs

./: Cargo.toml  build.rs  env.cross.ps1
api/proto/: api.proto
src/: main.rs  server.rs
src/serial/api/: mod.rs  serial.api.rs
