[package]
name = "serial-monitor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
parking_lot = "0.12.1"
prost = "0.12.1"
prost-types = "0.12.1"
serialport = "4.2.2"
tokio = "1.33.0"
tokio-serial = "5.4.4"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[build-dependencies]
tonic-build = "0.10.2"
